syntax = "proto3";

import "common.proto";

package ipc;

message EnvelopeHeaders {
	string msg_type = 1;
	common.UInt64Value fn_call_num = 2;
	repeated string path = 3;
}

message Envelope {
	EnvelopeHeaders headers = 1;
	common.BytesValue body = 2;
}
